# Linux-Hardening-and-System

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_MEMORY.md  DECISIONS.md  Dockerfile  PROGRESS.md  README.md  SECURITY_AUDIT.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: install-endpoint.sh  ossys.toml.example
deploy/cron/: ossys-root.cron  ossys-user.cron
deploy/systemd/: ossys-system.service  ossys-system.timer  ossys-user.service  ossys-user.timer
examples/ossys-plugin-demo/: pyproject.toml
examples/ossys-plugin-demo/src/ossys_plugin_demo/: __init__.py
scripts/: menu.sh  ossys-run.sh
src/ossys/: __init__.py  __main__.py  cli.py  config.py  exits.py  mcp_server.py  notify.py  output.py  plugins.py  preflight.py  privilege.py  system.py  tasks.py  validate.py
tests/: test_cli.py  test_config.py  test_mcp_server.py  test_notify.py  test_packaging.py  test_plugins.py  test_preflight.py  test_privilege.py  test_system.py  test_tasks.py
