[project]
name = "ossys"
version = "0.1.0"
description = "Small system task CLI — safe subprocess wrappers, no shell injection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    # tomllib is stdlib from 3.11; tomli is the backport for the 3.10 floor.
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
# Points at main(), not app(): main() is the exception boundary that maps errors onto the
# documented exit-code taxonomy (ossys.exits). Binding the Typer app directly would restore
# tracebacks and undifferentiated exit code 1.
ossys = "ossys.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    # The 3.10 install path uses the tomli backport; install it in dev so mypy
    # type-checks that branch at the declared python_version floor.
    "tomli>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# "S" is flake8-bandit: it flags shell=True, unvalidated subprocess use and unsafe tarfile
# handling automatically on every commit, turning the SECURITY_AUDIT findings into a
# permanent regression gate rather than a one-off review (DECISIONS.md D-007).
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately assert on subprocess argv, use temp paths, and seed the dice RNG.
"tests/**" = ["S101", "S108", "S311", "S603", "S607"]
# S311: the dice utility is explicitly demo output, not security-sensitive randomness —
# see the module docstring. Using secrets here would imply a guarantee ossys does not make.
"src/ossys/tasks.py" = ["S311"]
"src/ossys/cli.py" = ["S311"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ossys"]
branch = true

[tool.coverage.report]
# Phase 5 gate. Enforced in CI via --cov-fail-under so a coverage drop fails the build
# rather than being noticed later.
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
]
