[project]
name = "ossys"
version = "0.1.0"
description = "Hardened, automatable Linux admin CLI — no shell injection, machine-readable I/O."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "www8351", email = "www8351@gmail.com" }]
keywords = [
    "cli", "sysadmin", "security", "hardening", "shell-injection",
    "automation", "systemd", "cron", "subprocess", "typer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    # tomllib is stdlib from 3.11; tomli is the backport for the 3.10 floor.
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
# The MCP tool server. Optional on purpose: it exposes ossys operations to a language
# model, which is a materially different threat model from the CLI, and nobody should get
# that surface by accident as a side effect of installing an admin tool.
mcp = ["mcp>=1.2"]

[project.scripts]
# Points at main(), not app(): main() is the exception boundary that maps errors onto the
# documented exit-code taxonomy (ossys.exits). Binding the Typer app directly would restore
# tracebacks and undifferentiated exit code 1.
ossys = "ossys.cli:main"
# Separate binary rather than an `ossys mcp` subcommand: MCP clients are configured with a
# command to spawn, and keeping it distinct means the server surface cannot be reached by
# accident from an ordinary CLI invocation.
ossys-mcp = "ossys.mcp_server:main"

[project.urls]
Homepage = "https://github.com/www8351/Linux-Hardening-and-System"
Repository = "https://github.com/www8351/Linux-Hardening-and-System"
Issues = "https://github.com/www8351/Linux-Hardening-and-System/issues"
Changelog = "https://github.com/www8351/Linux-Hardening-and-System/blob/main/PROGRESS.md"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    # The 3.10 install path uses the tomli backport; install it in dev so mypy
    # type-checks that branch at the declared python_version floor.
    "tomli>=2.0.1",
    # Needed to test the MCP server; it stays an optional extra for consumers.
    "mcp>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ossys"]

[tool.hatch.build.targets.sdist]
# Ship the source, the tests that prove the security contract, and the deployment assets --
# but not the working notes. A consumer auditing the tarball should see what the code does
# and how it is verified, not a session-by-session progress log.
include = [
    "src/",
    "tests/",
    "deploy/",
    "examples/",
    "scripts/",
    "README.md",
    "LICENSE",
    "SECURITY_AUDIT.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# "S" is flake8-bandit: it flags shell=True, unvalidated subprocess use and unsafe tarfile
# handling automatically on every commit, turning the SECURITY_AUDIT findings into a
# permanent regression gate rather than a one-off review (DECISIONS.md D-007).
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately assert on subprocess argv, use temp paths, and seed the dice RNG.
# S105/S106: tests pass env-var *names* like "OSSYS_TOKEN" and dummy tokens; neither is a
# real credential.
"tests/**" = ["S101", "S105", "S106", "S108", "S311", "S603", "S607"]
# S311: the dice utility is explicitly demo output, not security-sensitive randomness —
# see the module docstring. Using secrets here would imply a guarantee ossys does not make.
"src/ossys/tasks.py" = ["S311"]
"src/ossys/cli.py" = ["S311"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ossys"]
branch = true

[tool.coverage.report]
# Phase 5 gate. Enforced in CI via --cov-fail-under so a coverage drop fails the build
# rather than being noticed later.
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
]
