[project]
name = "ossys-plugin-demo"
version = "0.1.0"
description = "Minimal example ossys plugin — template for a new admin domain."
requires-python = ">=3.10"
dependencies = [
    "ossys",
    "typer>=0.12",
]

# This is the whole integration. ossys discovers entry points in the "ossys.plugins" group
# at startup and mounts each one as a subcommand — no edit to ossys core is required, which
# is the point of Phase 4.
#
# The key ("demo") becomes the subcommand name: `ossys demo hello`. It is validated against
# an anchored allow-list and refused if it collides with a core command, so a plugin cannot
# silently redefine `useradd` or `check` for every timer already pointing at them.
[project.entry-points."ossys.plugins"]
demo = "ossys_plugin_demo:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
